--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+      - name: Set up CMake
+        uses: lukka/get-cmake@v3.27.7
       - name: Configure CMake
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
@@ -32,7 +34,7 @@ jobs:
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: |
           sudo apt-get install -y cppcheck
-          cppcheck --enable=all --suppress=unknownMacro --quiet --error-exitcode=10 ./include/ ./src/ ./tests/
+          cppcheck --enable=all --suppress=missingInclude --suppress=unknownMacro --quiet --error-exitcode=10 ./include/ ./src/ ./tests/
   clang-format:
     runs-on: ubuntu-latest
     steps:
