--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,9 +15,8 @@ jobs:
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Run clang-tidy
-        uses: HorstBaerbel/action-clang-tidy@1.2
-        with:
-          scandir: "${{ github.workspace }}/src/hades_extensions"
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: clang-tidy -p ./build-debug/compile_commands.json --quiet ./**/*.cpp ./**/*.hpp
   cppcheck:
     runs-on: ubuntu-latest
     steps:
@@ -25,9 +24,6 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
-      - name: Configure CMake
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: cmake --preset Debug
       - name: Run cppcheck
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: |
@@ -40,9 +36,6 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
-      - name: Configure CMake
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: cmake --preset Debug
       - name: Run clang-format
         uses: jidicula/clang-format-action@v4.11.0
         with:
