--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
+      - name: Configure CMake
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: cmake --preset Debug
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: clang-tidy -p ./build-debug/compile_commands.json --quiet ./**/*.cpp ./**/*.hpp
